--- a/package.json
+++ b/package.json
@@ -27,8 +27,8 @@
   "dependencies": {
     "bcrypt": "^5.1.0",
     "celebrate": "^15.0.1",
-    "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.3",
+    "body-parser": "^1.20.1",
     "express": "^4.18.2",
     "express-rate-limit": "^6.6.0",
     "express-winston": "^4.2.0",
